infra-as-code/dev/tnba-feedback.tf
locals {
   // automation-tnba-feedback local vars
  automation-tnba-feedback-image = "${data.aws_ecr_repository.automation-tnba-feedback.repository_url}:${data.external.tnba-feedback-build_number.result["image_tag"]}"
  automation-tnba-feedback-log_prefix = "${var.ENVIRONMENT}-${var.BUILD_NUMBER}"
  automation-tnba-feedback-ecs_task_definition-family = "${var.ENVIRONMENT}-tnba-feedback"
  automation-tnba-feedback-service-security_group-name = "${var.ENVIRONMENT}-tnba-feedback"
  automation-tnba-feedback-service-security_group-tag-Name = "${var.ENVIRONMENT}-tnba-feedback"
  automation-tnba-feedback-ecs_service-name = "${var.ENVIRONMENT}-tnba-feedback"
  automation-tnba-feedback-ecs_service-task_definition = "${aws_ecs_task_definition.automation-tnba-feedback[0].family}:${aws_ecs_task_definition.automation-tnba-feedback[0].revision}"
  automation-tnba-feedback-service_discovery_service-name = "tnba-feedback-${var.ENVIRONMENT}"
  automation-tnba-feedback-papertrail_prefix = "tnba-feedback-${element(split("-", data.external.tnba-feedback-build_number.result["image_tag"]),2)}"
}

data "aws_ecr_repository" "automation-tnba-feedback" {
  name = "automation-tnba-feedback"
}

data "external" "tnba-feedback-build_number" {
  program = [
    "bash",
    "${path.module}/scripts/obtain_latest_image_for_repository.sh",
    data.aws_ecr_repository.automation-tnba-feedback.name
  ]
}

data "template_file" "automation-tnba-feedback" {
  count = var.tnba_feedback_desired_tasks > 0 ? 1 : 0

  template = file("${path.module}/task-definitions/tnba_feedback.json")

  vars = {
    image = local.automation-tnba-feedback-image
    log_group = var.ENVIRONMENT
    log_prefix = local.automation-tnba-feedback-log_prefix

    PYTHONUNBUFFERED = var.PYTHONUNBUFFERED
    NATS_SERVER1 = local.nats_server1
    REDIS_HOSTNAME = local.redis-hostname
    REDIS_TNBA_FEEDBACK_HOSTNAME = local.automation-redis-tnba-feedback-hostname
    CURRENT_ENVIRONMENT = var.CURRENT_ENVIRONMENT
    PAPERTRAIL_ACTIVE = var.CURRENT_ENVIRONMENT == "production" ? true : false
    PAPERTRAIL_PREFIX = local.automation-tnba-feedback-papertrail_prefix
    PAPERTRAIL_HOST = var.PAPERTRAIL_HOST
    PAPERTRAIL_PORT = var.PAPERTRAIL_PORT
    ENVIRONMENT_NAME = var.ENVIRONMENT_NAME
  }
}

resource "aws_ecs_task_definition" "automation-tnba-feedback" {
  count = var.tnba_feedback_desired_tasks > 0 ? 1 : 0
  
  family = local.automation-tnba-feedback-ecs_task_definition-family
  container_definitions = data.template_file.automation-tnba-feedback[0].rendered
  requires_compatibilities = [
    "FARGATE"]
  network_mode = "awsvpc"
  cpu = "256"
  memory = "512"
  execution_role_arn = data.aws_iam_role.ecs_execution_role.arn
  task_role_arn = data.aws_iam_role.ecs_execution_role.arn
}

resource "aws_security_group" "automation-tnba-feedback_service" {
  count = var.tnba_feedback_desired_tasks > 0 ? 1 : 0

  vpc_id = data.aws_vpc.mettel-automation-vpc.id
  name = local.automation-tnba-feedback-service-security_group-name
  description = "Allow egress from container"

  egress {
    from_port = 0
    to_port = 0
    protocol = "-1"
    cidr_blocks = [
      "0.0.0.0/0"]
  }

  ingress {
    from_port = 8
    to_port = 0
    protocol = "icmp"
    cidr_blocks = [
      "0.0.0.0/0"]
  }

  ingress {
    from_port = 5000
    to_port = 5000
    protocol = "TCP"
    cidr_blocks = [
      "0.0.0.0/0"
    ]
  }

  tags = {
    Name = local.automation-tnba-feedback-service-security_group-tag-Name
    Environment = var.ENVIRONMENT
  }
}

resource "aws_service_discovery_service" "tnba-feedback" {
  count = var.tnba_feedback_desired_tasks > 0 ? 1 : 0

  name = local.automation-tnba-feedback-service_discovery_service-name

  dns_config {
    namespace_id = aws_service_discovery_private_dns_namespace.automation-zone.id

    dns_records {
      ttl = 10
      type = "A"
    }

    routing_policy = "MULTIVALUE"
  }

  health_check_custom_config {
    failure_threshold = 1
  }
}

resource "aws_ecs_service" "automation-tnba-feedback" {
  count = var.tnba_feedback_desired_tasks > 0 ? 1 : 0

  name = local.automation-tnba-feedback-ecs_service-name
  task_definition = local.automation-tnba-feedback-ecs_service-task_definition
  desired_count = var.tnba_feedback_desired_tasks
  launch_type = "FARGATE"
  cluster = aws_ecs_cluster.automation.id

  network_configuration {
    security_groups = [
      aws_security_group.automation-tnba-feedback_service[0].id]
    subnets = data.aws_subnet_ids.mettel-automation-private-subnets.ids
    assign_public_ip = false
  }

  service_registries {
    registry_arn = aws_service_discovery_service.tnba-feedback[0].arn
  }

  depends_on = [ null_resource.bruin-bridge-healthcheck,
                 null_resource.cts-bridge-healthcheck,
                 null_resource.digi-bridge-healthcheck,
                 null_resource.email-tagger-kre-bridge-healthcheck,
                 null_resource.hawkeye-bridge-healthcheck,
                 null_resource.lit-bridge-healthcheck,
                 null_resource.metrics-prometheus-healthcheck,
                 null_resource.notifier-healthcheck,
                 null_resource.t7-bridge-healthcheck,
                 null_resource.velocloud-bridge-healthcheck]
}
